Bug #16905 Log tables: unicode statements are logged incorrectly
Submitted: 30 Jan 2006 18:09 Modified: 14 Feb 2006 18:48
Reporter: Petr Chardin
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:5.1.6-bk OS:Linux (Suse 9.2)
Assigned to: Bugs System Target Version:

[30 Jan 2006 18:09] Petr Chardin
Description:
Statements, which contain utf characters are logged into the log tables incorrectly.
See sample below.

How to repeat:
mysql> set names utf8;
Query OK, 0 rows affected (0.00 sec)
mysql> create table db1.t25 (s1 char(5) character set utf8 default
'þÿİı');
Query OK, 0 rows affected (0.01 sec)
mysql> insert into db1.t25 values ('þÿİı');
Query OK, 1 row affected (0.00 sec)
mysql> select * from mysql.general_log;
... part of the result is:
insert into db1.t25 values ('þÿİı')
[3 Feb 2006 11:03] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/2119
[7 Feb 2006 11:39] Alexander Barkov
The patch looks ok to push for me.
[10 Feb 2006 8:52] Petr Chardin
pushed into 5.1.7 (therefore exists in released 5.1.6-alpha and should be documented)
[14 Feb 2006 18:48] Mike Hillyer
Documented in 5.1.7 changelog:

<listitem>
        <para>
          Statements that contained Unicode characters were not logged
          to the log tables correctly. (Bug #16905)
        </para>
      </listitem>