Fix for Bug#16905 Log tables: unicode statements are logged incorrectly